# mumps-graph

./: .gitignore  CLAUDE.md  README.md  README_GRAPH_PHASE1.md  analyze_packages_csv.py  cleanup_database.py  cleanup_duplicates.py  create_phase3_indexes.py  debug_phase2.py  feature_1.md  feature_2.md  feature_3.md  feature_4.md  feature_fieldaccess.md  filesystem_packages.txt  final_package_analysis.py  investigate_packages.py  pyproject.toml  validate_phase3_graph.py  validation_script.md  verify_file_number_fix.py  vista_analysis_report.md  vista_analysis_report_v2.md  vista_graph_implementation_roadmap.md
.claude/commands/: execute-prp.md
Claude-Desktop/: hybrid_iterative_approach.md  pure_discovery_approach.md
PRPs/: field_access_tracking.md  vista_discovery_phase1.md  vista_graph_phase1.md  vista_graph_phase2.md  vista_graph_phase3.md  vista_graph_phase4.md
docker/: docker-compose.yml
prompts/: research_and_plan.md
src/: main.py
src/config/: settings.py
src/graph/: builder.py  connection.py  node_cache.py  queries.py
src/models/: nodes.py  relationships.py
src/parsers/: code_extractor.py  csv_parser.py  routine_parser.py  zwr_parser.py
tests/: conftest.py  test_csv_parser.py  test_graph_builder.py  test_phase2_builder.py  test_phase2_parser.py  test_phase3_builder.py  test_routine_parser.py  test_zwr_parser.py
tests/fixtures/: sample_dd.zwr  sample_packages.csv
